--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -11,7 +11,6 @@
 
 
 Chantel R. Wetzel\textsuperscript{1}\\
-Kelli Johnson\textsuperscript{1}\\
 Lee Cronin-Fine\textsuperscript{2}\\
 
 \vspace{.5cm}
@@ -23,12 +22,11 @@ Lee Cronin-Fine\textsuperscript{2}\\
 
 \textsuperscript{3}University of Washington, School of Aquatic and Fishery Sciences\\
 
-\vspace{.3cm}
-
-%\textsuperscript{4}Oregon Department of Fish and Wildlife, 2040 SE Marine Science Drive, Newport, OR 97365\\
 
 
-\vspace{.5cm}
+
+
+\vspace{1cm}
 
 \vfill
 DRAFT SAFE\\
